egglog-experimental/tests/snapshots/files__proofs__for_proof_testing.snap
---
source: egglog-experimental/tests/files.rs
expression: snapshot
---
(Rule (= (R 1 2) (R 1 2)) (name "@for_rule1") (premises) (substitution))
