egglog-experimental/tests/snapshots/files__proofs__rules_nee_desugared_proof_testing.snap
---
source: egglog-experimental/tests/files.rs
expression: snapshot
---
(Rule
  (= (___disequality-contradiction) (___disequality-contradiction))
  (name "______disequality-ne-self-Term")
  (premises
    (Congr
      (= (___disequality-ne-Term (A) (B)) (___disequality-ne-Term (A) (A)))
      (Rule
        (= (___disequality-ne-Term (A) (B)) (___disequality-ne-Term (A) (B)))
        (name
          "(rule ((Pair a b))
      ((___disequality-ne-Term a b))
         )")
        (premises (Fiat (= (Pair (A) (B)) (Pair (A) (B)))))
        (substitution (a (A)) (b (B))))
      (Sym (= (B) (A)) (Fiat (= (A) (B))))
      1))
  (substitution (x (A))))
