egglog-experimental/tests/snapshots/files__proofs__test_fresh_proof_testing.snap
---
source: egglog-experimental/tests/files.rs
expression: snapshot
---
(let t0 (@GeneratedFreshTable (Var "x") (Var "y") 0))
(let t1 (Let t0 (Var "y")))
(let t2 (Let (Var "x") (Var "y")))
(let prf0 (Fiat (= t2 t2)))
(Rule
  (= (@ExistsConstructor) (@ExistsConstructor))
  (name "@prove_exists_rule")
  (premises
    (Rule
      (= t1 t1)
      (name
        "(rule ((Let a b))
      ((Let (@GeneratedFreshTable a b 0) b))
         )")
      (premises prf0)
      (substitution (a (Var "x")) (b (Var "y"))))
    prf0
    (Fiat (= () ())))
  (substitution (?x t0) (?y (Var "x"))))
