egglog-experimental/tests/snapshots/files__proofs__test_working_fresh_proof_testing.snap
---
source: egglog-experimental/tests/files.rs
expression: snapshot
---
(let t0 (Let (Var "x") (Var "y")))
(Fiat (= t0 t0))
(let t0 (Let (Var "x") (Var "y")))
(Fiat (= t0 t0))
