egglog-experimental/tests/snapshots/files__proofs__with_ruleset_proof_testing.snap
---
source: egglog-experimental/tests/files.rs
expression: snapshot
---
(Rule
  (= (Num 1) (Num 1))
  (name
    "(rule ()
      ((Num 1))
        :ruleset optimization )")
  (premises)
  (substitution))
(let t0 (Add (Num 2) (Num 3)))
(Rule
  (= t0 (Add (Num 3) (Num 2)))
  (name "(rewrite (Add a b) (Add b a) :ruleset optimization)")
  (premises (Fiat (= t0 t0)))
  (substitution (@rewrite_var__ t0) (a (Num 2)) (b (Num 3))))
